--- a/test.html
+++ b/test.html
@@ -58,32 +58,120 @@
         white-space: pre; /* Add this line */
         overflow: auto; /* Add a scrollbar if the content overflows */
         font-weight: bold;
+
     }
     #activeHands {
         bottom: 5vh; /* Adjust this value based on the height of the other textarea */
     }
-        #syncButton, #resetButton, #syncButtonMinuten {
-            display: block;
-            width: 200px;
-            margin: 20px auto;
-        }
+    #syncButton, #resetButton, #syncButtonMinuten {
+    display: block;
+    width: 200px;
+    margin: 0; /* Setzen Sie den margin auf 0 */
+}
+        .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.switch {
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.button-container {
+    display: flex;
+    gap: 10px;
+    justify-content: center; /* Zentriert die Buttons horizontal */
+    align-items: center; /* Zentriert die Buttons vertikal */
+    margin-top: 20px;
+}
+.button-container button {
+    margin: 0;
+    padding: 10px;
+}
+.button-container button {
+    box-sizing: border-box;
+}
     </style>
 </head>
 <body>
     <h1 align="center">Dem Papa seine Uhr</h1>
     <div id="clocks"></div>
-    <button id="syncButton">Sync Stunden</button>
-    <button id="syncButtonMinuten">Sync Minuten</button>
-    <button id="resetButton">Reset Textbox</button>
     <textarea id="coordinates" readonly></textarea>
     <textarea id="activeHands" readonly></textarea>
     <div class="center">
         <h1>Pause hinzufügen (Anzahl Schritte)</h1>
         <select id="numberSelect"></select>
     </div>
+    <div class="button-container">
+        <button id="syncButton">Sync Minuten</button>
+        <button id="syncButtonMinuten">Sync Stunden</button>
+        <button id="resetButton">Reset Textbox</button>
+        <button onclick="location.reload()">RESET</button>
+        <label class="switch">
+            <input type="checkbox" id="toggleButton" onchange="updateLabel(this)">
+            <span class="slider round"></span>
+        </label>
+        <span id="toggleLabel">Rückwärts</span>
+    </div>
 
-
-    <script>var _0x2d47c2=_0x3283;(function(_0x157a2c,_0x5b5df2){var _0x233cec=_0x3283,_0x5c4103=_0x157a2c();while(!![]){try{var _0xaa536f=-parseInt(_0x233cec(0x9a))/0x1+parseInt(_0x233cec(0xb8))/0x2*(-parseInt(_0x233cec(0xb7))/0x3)+parseInt(_0x233cec(0xc0))/0x4+-parseInt(_0x233cec(0xb6))/0x5+parseInt(_0x233cec(0xb2))/0x6*(parseInt(_0x233cec(0xa3))/0x7)+-parseInt(_0x233cec(0xc6))/0x8*(parseInt(_0x233cec(0xac))/0x9)+parseInt(_0x233cec(0x93))/0xa*(parseInt(_0x233cec(0xa5))/0xb);if(_0xaa536f===_0x5b5df2)break;else _0x5c4103['push'](_0x5c4103['shift']());}catch(_0x223212){_0x5c4103['push'](_0x5c4103['shift']());}}}(_0x4693,0x8b737));var clocksContainer=document['getElementById'](_0x2d47c2(0xa1)),coordinates=document[_0x2d47c2(0xa7)]('coordinates'),activeHandsBox=document[_0x2d47c2(0xa7)](_0x2d47c2(0xab)),syncButton=document[_0x2d47c2(0xa7)]('syncButton'),syncButtonMinuten=document[_0x2d47c2(0xa7)](_0x2d47c2(0xbe)),resetButton=document[_0x2d47c2(0xa7)]('resetButton'),select=document[_0x2d47c2(0xa7)]('numberSelect'),activeAngle=0x0,activeHands=[],baseNumbers=[0xb,0xd,0x29,0x2b,0x47,0x49,0x65,0x67];for(var i=0x0;i<=0x10;i++){var option=document[_0x2d47c2(0xc5)](_0x2d47c2(0xba));option[_0x2d47c2(0xb0)]=i,option[_0x2d47c2(0xaf)]=i,select[_0x2d47c2(0xb9)](option);}for(var i=0x0;i<0x18;i++){var clock=document[_0x2d47c2(0xc5)](_0x2d47c2(0x92));clock[_0x2d47c2(0x91)]=_0x2d47c2(0xa6);var hourHand=document[_0x2d47c2(0xc5)](_0x2d47c2(0x92));hourHand[_0x2d47c2(0x91)]='hand\x20hour-hand',hourHand[_0x2d47c2(0x99)][_0x2d47c2(0x94)]=baseNumbers[i%0x8]+Math[_0x2d47c2(0x96)](i/0x8)*0xa,clock[_0x2d47c2(0xb9)](hourHand);var minuteHand=document[_0x2d47c2(0xc5)]('div');minuteHand['className']=_0x2d47c2(0xc2),minuteHand[_0x2d47c2(0x99)][_0x2d47c2(0x94)]=baseNumbers[i%0x8]+0x1+Math[_0x2d47c2(0x96)](i/0x8)*0xa,clock['appendChild'](minuteHand);for(var j=0x0;j<0x10;j++){var dot=document[_0x2d47c2(0xc5)](_0x2d47c2(0x92));dot[_0x2d47c2(0x91)]=_0x2d47c2(0x8f),dot[_0x2d47c2(0x9c)][_0x2d47c2(0xc1)]=0x32-0x2d*Math['sin'](j*Math['PI']/0x8)+'%',dot[_0x2d47c2(0x9c)][_0x2d47c2(0xad)]=0x32+0x2d*Math[_0x2d47c2(0xa0)](j*Math['PI']/0x8)+'%',clock[_0x2d47c2(0xb9)](dot);}clocksContainer[_0x2d47c2(0xb9)](clock),hourHand[_0x2d47c2(0x8d)](_0x2d47c2(0x98),function(_0x88d422){var _0x1853b4=_0x2d47c2;_0x88d422['stopPropagation'](),activeHands['push'](this),activeHandsBox[_0x1853b4(0xb0)]+=this[_0x1853b4(0x99)]['number']+_0x1853b4(0x90);}),minuteHand[_0x2d47c2(0x8d)](_0x2d47c2(0x98),function(_0x11d1ff){var _0xf858ef=_0x2d47c2;_0x11d1ff[_0xf858ef(0xa2)](),activeHands[_0xf858ef(0xa9)](this),activeHandsBox[_0xf858ef(0xb0)]+=this['dataset'][_0xf858ef(0x94)]+_0xf858ef(0x90);}),clock[_0x2d47c2(0x8d)](_0x2d47c2(0x98),function(_0x38c57d){var _0xd3c620=_0x2d47c2;if(activeHands[_0xd3c620(0xb5)]===0x0)return;var _0x5e4f01=this[_0xd3c620(0x95)](),_0x52f352=_0x38c57d[_0xd3c620(0xbd)]-_0x5e4f01[_0xd3c620(0xad)]-this[_0xd3c620(0xc4)]/0x2,_0x186a73=_0x38c57d[_0xd3c620(0xaa)]-_0x5e4f01[_0xd3c620(0xc1)]-this[_0xd3c620(0xae)]/0x2,_0x5ae104=Math[_0xd3c620(0xb3)](_0x186a73,_0x52f352)+Math['PI']/0x2;_0x5ae104<0x0&&(_0x5ae104+=0x2*Math['PI']);var _0x4b3728=Math[_0xd3c620(0x9b)](_0x5ae104/(Math['PI']/0x8));_0x5ae104=_0x4b3728*(Math['PI']/0x8);var _0x5369bf=activeHands[_0xd3c620(0xbb)](function(_0x22b649){var _0x36d694=_0xd3c620;return _0x22b649['style'][_0x36d694(0xc7)]='translateX(-50%)\x20rotate('+_0x5ae104+_0x36d694(0xb1),_0x22b649['dataset'][_0x36d694(0x94)];})[_0xd3c620(0x9e)](','),_0x36329b=Number(select['value'])+0x28;select[_0xd3c620(0xb0)]==0x0?coordinates[_0xd3c620(0xb0)]+=(coordinates[_0xd3c620(0xb0)]?',':'')+_0xd3c620(0xc3)+_0x5369bf+_0xd3c620(0xa4)+_0x4b3728+_0xd3c620(0x97):coordinates[_0xd3c620(0xb0)]+=(coordinates[_0xd3c620(0xb0)]?',':'')+'210,'+_0x5369bf+_0xd3c620(0xa4)+_0x36329b+','+_0x4b3728+_0xd3c620(0x97),activeAngle=_0x5ae104,activeHands=[],activeHandsBox[_0xd3c620(0xb0)]='';});}function updateCoordinates(){var _0x4f6b37=_0x2d47c2;coordinates[_0x4f6b37(0xb0)]='',activeHands[_0x4f6b37(0x8c)](function(_0x149569){var _0x875c54=_0x4f6b37,_0x15d310=getRotationDegrees(_0x149569),_0x8fa03a=Math['round'](_0x15d310/0x168*0xc);coordinates['value']+=_0x875c54(0xc3)+_0x149569[_0x875c54(0x99)]['number']+',230,'+_0x8fa03a+_0x875c54(0xa8);});}function getRotationDegrees(_0x2ba165){var _0x459c83=_0x2d47c2;const _0x5be073=window[_0x459c83(0xb4)](_0x2ba165),_0x4b1a1b=_0x5be073[_0x459c83(0xc7)],_0x553329=_0x4b1a1b[_0x459c83(0x8e)]('(')[0x1]['split'](')')[0x0][_0x459c83(0x8e)](','),_0x1b19c1=_0x553329[0x0],_0x3ffce2=_0x553329[0x1],_0x3e6b19=Math[_0x459c83(0xb3)](_0x3ffce2,_0x1b19c1);let _0x405be8=_0x3e6b19*(0xb4/Math['PI']);if(_0x405be8<0x0)_0x405be8+=0x168;return _0x405be8;}function _0x4693(){var _0x1d13a8=['value','rad)','2088tYPrXd','atan2','getComputedStyle','length','3057385yTuePA','89211LrzxdK','4hAMRvH','appendChild','option','map','deg)','clientX','syncButtonMinuten','getElementsByClassName','2388504vNbjeE','top','hand\x20minute-hand','210,','offsetWidth','createElement','39224vSblcF','transform','forEach','addEventListener','split','dot','\x20aktiviert,\x20','className','div','330doDXVL','number','getBoundingClientRect','floor',',255','click','dataset','641620zzhlhc','round','style','translateX(-50%)\x20rotate(','join','syncButton','cos','clocks','stopPropagation','7861IALkfU',',230,','623843uAdaAB','clock','getElementById',',255\x0a','push','clientY','activeHands','1791eHHDbs','left','offsetHeight','text'];_0x4693=function(){return _0x1d13a8;};return _0x4693();}var syncButton=document[_0x2d47c2(0xa7)](_0x2d47c2(0x9f));function _0x3283(_0x4af0ce,_0x294cbd){var _0x469392=_0x4693();return _0x3283=function(_0x32838f,_0x4de8ad){_0x32838f=_0x32838f-0x8c;var _0x36f728=_0x469392[_0x32838f];return _0x36f728;},_0x3283(_0x4af0ce,_0x294cbd);}syncButton[_0x2d47c2(0x8d)](_0x2d47c2(0x98),function(){var _0x50d54e=_0x2d47c2,_0x39a7a0=document[_0x50d54e(0xbf)]('hour-hand'),_0x3c06a4=activeAngle*(0xb4/Math['PI']);for(var _0x4b1766=0x0;_0x4b1766<_0x39a7a0[_0x50d54e(0xb5)];_0x4b1766++){_0x39a7a0[_0x4b1766]['style'][_0x50d54e(0xc7)]='translateX(-50%)\x20rotate('+_0x3c06a4+'deg)';}});var syncButtonMinuten=document[_0x2d47c2(0xa7)](_0x2d47c2(0xbe));syncButtonMinuten[_0x2d47c2(0x8d)](_0x2d47c2(0x98),function(){var _0x2187c2=_0x2d47c2,_0x4bb6b7=document['getElementsByClassName']('minute-hand'),_0x1a2054=activeAngle*(0xb4/Math['PI']);for(var _0x2023b1=0x0;_0x2023b1<_0x4bb6b7[_0x2187c2(0xb5)];_0x2023b1++){_0x4bb6b7[_0x2023b1][_0x2187c2(0x9c)][_0x2187c2(0xc7)]=_0x2187c2(0x9d)+_0x1a2054+_0x2187c2(0xbc);}}),resetButton['addEventListener']('click',function(){var _0x40001e=_0x2d47c2;coordinates[_0x40001e(0xb0)]='',activeHandsBox[_0x40001e(0xb0)]='';});</script>
+<script>
+    var _0x193f28=_0x2464;(function(_0x5ecd93,_0x2d85d0){var _0x2d1536=_0x2464,_0x42f8ac=_0x5ecd93();while(!![]){try{var _0x576987=parseInt(_0x2d1536(0x1dd))/0x1+-parseInt(_0x2d1536(0x1bb))/0x2+-parseInt(_0x2d1536(0x1fd))/0x3*(-parseInt(_0x2d1536(0x1ea))/0x4)+-parseInt(_0x2d1536(0x1c3))/0x5*(-parseInt(_0x2d1536(0x1da))/0x6)+-parseInt(_0x2d1536(0x1d6))/0x7*(-parseInt(_0x2d1536(0x1ee))/0x8)+-parseInt(_0x2d1536(0x1f9))/0x9*(parseInt(_0x2d1536(0x1e2))/0xa)+-parseInt(_0x2d1536(0x1f1))/0xb*(-parseInt(_0x2d1536(0x1b9))/0xc);if(_0x576987===_0x2d85d0)break;else _0x42f8ac['push'](_0x42f8ac['shift']());}catch(_0x5e3031){_0x42f8ac['push'](_0x42f8ac['shift']());}}}(_0x4952,0x4d65a));var clocksContainer=document[_0x193f28(0x1cd)](_0x193f28(0x1c8)),coordinates=document['getElementById'](_0x193f28(0x1d0)),activeHandsBox=document[_0x193f28(0x1cd)](_0x193f28(0x1f3)),syncButton=document[_0x193f28(0x1cd)](_0x193f28(0x1cb)),syncButtonMinuten=document[_0x193f28(0x1cd)](_0x193f28(0x1c0)),resetButton=document[_0x193f28(0x1cd)]('resetButton'),select=document[_0x193f28(0x1cd)](_0x193f28(0x1fb)),activeAngle=0x0,activeHands=[],baseNumbers=[0xb,0xd,0x29,0x2b,0x47,0x49,0x65,0x67];for(var i=0x0;i<=0x10;i++){var option=document[_0x193f28(0x1c5)](_0x193f28(0x1e8));option[_0x193f28(0x1c4)]=i,option[_0x193f28(0x1e0)]=i,select[_0x193f28(0x1d1)](option);}for(var i=0x0;i<0x18;i++){var clock=document[_0x193f28(0x1c5)](_0x193f28(0x1df));clock[_0x193f28(0x1f2)]=_0x193f28(0x1c6);var hourHand=document[_0x193f28(0x1c5)](_0x193f28(0x1df));hourHand['className']=_0x193f28(0x1d2),hourHand[_0x193f28(0x1cc)][_0x193f28(0x1fa)]=baseNumbers[i%0x8]+Math[_0x193f28(0x1d8)](i/0x8)*0xa,clock[_0x193f28(0x1d1)](hourHand);var minuteHand=document[_0x193f28(0x1c5)](_0x193f28(0x1df));minuteHand[_0x193f28(0x1f2)]=_0x193f28(0x1d9),minuteHand[_0x193f28(0x1cc)][_0x193f28(0x1fa)]=baseNumbers[i%0x8]+0x1+Math[_0x193f28(0x1d8)](i/0x8)*0xa,clock[_0x193f28(0x1d1)](minuteHand);for(var j=0x0;j<0x10;j++){var dot=document['createElement'](_0x193f28(0x1df));dot['className']=_0x193f28(0x1ce),dot['style'][_0x193f28(0x1f7)]=0x32-0x2d*Math[_0x193f28(0x1bf)](j*Math['PI']/0x8)+'%',dot['style']['left']=0x32+0x2d*Math['cos'](j*Math['PI']/0x8)+'%',clock['appendChild'](dot);}clocksContainer[_0x193f28(0x1d1)](clock),hourHand[_0x193f28(0x1e5)](_0x193f28(0x1de),function(_0xddd3c4){var _0xa90f82=_0x193f28;_0xddd3c4[_0xa90f82(0x1eb)](),activeHands['push'](this),activeHandsBox[_0xa90f82(0x1c4)]+=this[_0xa90f82(0x1cc)][_0xa90f82(0x1fa)]+'\x20aktiviert,\x20';}),minuteHand[_0x193f28(0x1e5)]('click',function(_0x1a7376){var _0x13ada4=_0x193f28;_0x1a7376[_0x13ada4(0x1eb)](),activeHands[_0x13ada4(0x1ef)](this),activeHandsBox[_0x13ada4(0x1c4)]+=this['dataset']['number']+_0x13ada4(0x1db);}),clock[_0x193f28(0x1e5)]('click',function(_0x14c2e2){var _0x5a0f41=_0x193f28;if(activeHands[_0x5a0f41(0x1ec)]===0x0)return;var _0xf614b6=this[_0x5a0f41(0x1c9)](),_0x39b98b=_0x14c2e2[_0x5a0f41(0x1dc)]-_0xf614b6[_0x5a0f41(0x1d4)]-this[_0x5a0f41(0x1be)]/0x2,_0x302259=_0x14c2e2[_0x5a0f41(0x1f0)]-_0xf614b6[_0x5a0f41(0x1f7)]-this[_0x5a0f41(0x1f8)]/0x2,_0x4c2d21=Math[_0x5a0f41(0x1e6)](_0x302259,_0x39b98b)+Math['PI']/0x2;_0x4c2d21<0x0&&(_0x4c2d21+=0x2*Math['PI']);var _0xf6d9e1=Math[_0x5a0f41(0x1bc)](_0x4c2d21/(Math['PI']/0x8));_0x4c2d21=_0xf6d9e1*(Math['PI']/0x8);var _0x215b91=activeHands['map'](function(_0x5d6887){var _0x467bbd=_0x5a0f41;return _0x5d6887[_0x467bbd(0x1c1)][_0x467bbd(0x1ba)]=_0x467bbd(0x1e1)+_0x4c2d21+_0x467bbd(0x1d7),_0x5d6887[_0x467bbd(0x1cc)][_0x467bbd(0x1fa)];})[_0x5a0f41(0x1d3)](','),_0x2d88fd=Number(select[_0x5a0f41(0x1c4)])+0x28,_0x40c536=document[_0x5a0f41(0x1cd)](_0x5a0f41(0x1c7)),_0x39438f=_0xf6d9e1;_0x40c536[_0x5a0f41(0x1e4)]&&(_0x39438f+=0x14),select['value']==0x0?coordinates[_0x5a0f41(0x1c4)]+=(coordinates[_0x5a0f41(0x1c4)]?',':'')+_0x5a0f41(0x1cf)+_0x215b91+_0x5a0f41(0x1ca)+_0x39438f+_0x5a0f41(0x1e9):coordinates[_0x5a0f41(0x1c4)]+=(coordinates[_0x5a0f41(0x1c4)]?',':'')+_0x5a0f41(0x1cf)+_0x215b91+',230,'+_0x2d88fd+','+_0x39438f+',255',activeAngle=_0x4c2d21,activeHands=[],activeHandsBox[_0x5a0f41(0x1c4)]='';});}function updateCoordinates(){var _0x1e5fa4=_0x193f28;coordinates[_0x1e5fa4(0x1c4)]='',activeHands['forEach'](function(_0x21f6f8){var _0x68d043=_0x1e5fa4,_0x54c24f=getRotationDegrees(_0x21f6f8),_0x473c0e=Math['round'](_0x54c24f/0x168*0xc);coordinates[_0x68d043(0x1c4)]+=_0x68d043(0x1cf)+_0x21f6f8[_0x68d043(0x1cc)][_0x68d043(0x1fa)]+_0x68d043(0x1ca)+_0x473c0e+_0x68d043(0x1c2);});}function getRotationDegrees(_0x5de30b){var _0x33c3c3=_0x193f28;const _0x4f669b=window[_0x33c3c3(0x1f4)](_0x5de30b),_0x52cd5d=_0x4f669b['transform'],_0x50e8ea=_0x52cd5d[_0x33c3c3(0x1e7)]('(')[0x1][_0x33c3c3(0x1e7)](')')[0x0][_0x33c3c3(0x1e7)](','),_0xe486cb=_0x50e8ea[0x0],_0x3eb8f2=_0x50e8ea[0x1],_0x14755c=Math['atan2'](_0x3eb8f2,_0xe486cb);let _0x41416f=_0x14755c*(0xb4/Math['PI']);if(_0x41416f<0x0)_0x41416f+=0x168;return _0x41416f;}var syncButton=document[_0x193f28(0x1cd)](_0x193f28(0x1cb));syncButton[_0x193f28(0x1e5)](_0x193f28(0x1de),function(){var _0x4a4ee6=_0x193f28,_0x420f0d=document[_0x4a4ee6(0x1f6)](_0x4a4ee6(0x1e3)),_0x496162=activeAngle*(0xb4/Math['PI']);for(var _0x44ca46=0x0;_0x44ca46<_0x420f0d[_0x4a4ee6(0x1ec)];_0x44ca46++){_0x420f0d[_0x44ca46][_0x4a4ee6(0x1c1)][_0x4a4ee6(0x1ba)]=_0x4a4ee6(0x1e1)+_0x496162+_0x4a4ee6(0x1ed);}});var syncButtonMinuten=document[_0x193f28(0x1cd)](_0x193f28(0x1c0));syncButtonMinuten['addEventListener'](_0x193f28(0x1de),function(){var _0xcf55fe=_0x193f28,_0x3a3b6f=document['getElementsByClassName'](_0xcf55fe(0x1d5)),_0x457d16=activeAngle*(0xb4/Math['PI']);for(var _0x5396b4=0x0;_0x5396b4<_0x3a3b6f['length'];_0x5396b4++){_0x3a3b6f[_0x5396b4][_0xcf55fe(0x1c1)][_0xcf55fe(0x1ba)]='translateX(-50%)\x20rotate('+_0x457d16+_0xcf55fe(0x1ed);}});function _0x2464(_0x1220f1,_0x374a7e){var _0x495245=_0x4952();return _0x2464=function(_0x246456,_0xeb0438){_0x246456=_0x246456-0x1b9;var _0x292595=_0x495245[_0x246456];return _0x292595;},_0x2464(_0x1220f1,_0x374a7e);}function updateLabel(_0x4ef9da){var _0x4d57ff=_0x193f28,_0x434274=document['getElementById'](_0x4d57ff(0x1fc));_0x4ef9da[_0x4d57ff(0x1e4)]?_0x434274['textContent']=_0x4d57ff(0x1bd):_0x434274['textContent']=_0x4d57ff(0x1f5);}function _0x4952(){var _0x328bec=['62997UiDETT','className','activeHands','getComputedStyle','Rückwärts','getElementsByClassName','top','offsetHeight','81tgGozp','number','numberSelect','toggleLabel','78TOprjo','1308lOikTk','transform','1069046EecyLQ','round','Vorwärts','offsetWidth','sin','syncButtonMinuten','style',',255\x0a','55YmErBL','value','createElement','clock','toggleButton','clocks','getBoundingClientRect',',230,','syncButton','dataset','getElementById','dot','210,','coordinates','appendChild','hand\x20hour-hand','join','left','minute-hand','7alIePk','rad)','floor','hand\x20minute-hand','301206fUXVSm','\x20aktiviert,\x20','clientX','165097miwhUE','click','div','text','translateX(-50%)\x20rotate(','614490HXTyDr','hour-hand','checked','addEventListener','atan2','split','option',',255','3232JnGQGv','stopPropagation','length','deg)','336184IZrDHv','push','clientY'];_0x4952=function(){return _0x328bec;};return _0x4952();}resetButton['addEventListener']('click',function(){var _0x1c8bed=_0x193f28;coordinates[_0x1c8bed(0x1c4)]='',activeHandsBox[_0x1c8bed(0x1c4)]='';});
+</script>
 
 
 </body>
